--- a/taxi/.classpath
+++ b/taxi/.classpath
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="dvrp"/>
-	<classpathentry kind="src" path="matsim"/>
-	<classpathentry kind="src" path="michalm"/>
 	<classpathentry kind="src" path="sarp/main/java"/>
-	<classpathentry kind="src" path="otfvis/main/java"/>
+	<classpathentry kind="src" path="otfvis/src/main/java"/>
+	<classpathentry kind="src" path="matsim/src/main/java"/>
+	<classpathentry kind="src" path="dvrp/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="libs/activation-2.1.7.jar"/>
 	<classpathentry kind="lib" path="libs/avalon-framework-4.1.3.jar"/>
@@ -92,7 +91,7 @@
 	<classpathentry kind="lib" path="libs/javax.inject-1.jar"/>
 	<classpathentry kind="lib" path="libs/jsr94-j2ee.rar"/>
 	<classpathentry kind="lib" path="libs/guava.jar"/>
-	<classpathentry kind="lib" path="/home/tuananh/Documents/projects/michalm/lib/gurobi-5.6.2.jar"/>
-	<classpathentry kind="lib" path="/home/tuananh/Documents/projects/michalm/lib/util-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="libs/gurobi-5.6.2.jar"/>
+	<classpathentry kind="lib" path="libs/util-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
