--- a/taxi/.classpath
+++ b/taxi/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="sarp/main/java"/>
-	<classpathentry kind="src" path="otfvis/src/main/java"/>
-	<classpathentry kind="src" path="matsim/src/main/java"/>
+	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="dvrp/src/main/java"/>
+	<classpathentry kind="src" path="matsim/src/main/java"/>
+	<classpathentry kind="src" path="otfvis/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="libs/activation-2.1.7.jar"/>
 	<classpathentry kind="lib" path="libs/avalon-framework-4.1.3.jar"/>
